[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/HUD/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HUD/CanvasLayer.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/dogica/TTF/dogicabold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/dogica/TTF/dogicabold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Backdrop"]

[node name="PauseMenu" type="Popup" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/CenterContainer"]
margin_left = 784.0
margin_top = 464.0
margin_right = 1136.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 1
valign = 1

[node name="UnpauseButton" type="Button" parent="PauseMenu/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 352.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevelButton" type="Button" parent="PauseMenu/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 352.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 4 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="PauseMenu/MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 129.0
margin_right = 352.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 4 )
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMenu" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayTimer" type="Timer" parent="GameOverMenu"]
wait_time = 2.0
one_shot = true

[node name="CenterContainer" type="CenterContainer" parent="GameOverMenu"]
margin_top = -2.51978
margin_right = 1920.0
margin_bottom = 1077.48
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/CenterContainer"]
margin_left = 784.0
margin_top = 488.0
margin_right = 1136.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="GameOverMenu/CenterContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="RestartLevelButton" type="Button" parent="GameOverMenu/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 352.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="GameOverMenu/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 82.0
margin_right = 352.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 4 )
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryMenu" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayTimer" type="Timer" parent="VictoryMenu"]
wait_time = 2.0
one_shot = true

[node name="CenterContainer" type="CenterContainer" parent="VictoryMenu"]
margin_top = -2.51978
margin_right = 1920.0
margin_bottom = 1077.48
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryMenu/CenterContainer"]
margin_left = 784.0
margin_top = 468.0
margin_right = 1136.0
margin_bottom = 611.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VictoryMenu/CenterContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "LEVEL COMPLETE"
align = 1
valign = 1

[node name="LabelScore" type="Label" parent="VictoryMenu/CenterContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="RestartLevelButton" type="Button" parent="VictoryMenu/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 352.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VictoryMenu/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 82.0
margin_right = 352.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 4 )
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Backdrop/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/CenterContainer/VBoxContainer/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/CenterContainer/VBoxContainer/RestartLevelButton" to="." method="_on_RestartLevelButton_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="GameOverMenu/DelayTimer" to="." method="_on_GameOverMenu_DelayTimer_timeout"]
[connection signal="pressed" from="GameOverMenu/CenterContainer/VBoxContainer/RestartLevelButton" to="." method="_on_RestartLevelButton_pressed"]
[connection signal="pressed" from="GameOverMenu/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="VictoryMenu/DelayTimer" to="." method="_on_VictoryMenu_DelayTimer_timeout"]
[connection signal="pressed" from="VictoryMenu/CenterContainer/VBoxContainer/RestartLevelButton" to="." method="_on_RestartLevelButton_pressed"]
[connection signal="pressed" from="VictoryMenu/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
